# freeglut

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.wat  README  README.android  README.blackberry  README.cmake  README.cygwin_mingw  README.macos  README.macosx  README.md  README.mingw_cross  README.ogc  README.win32  freeglut.dsw  freeglut.pc.in  freeglut.rc.in  freeglut_static.dsp  freeglut_static_vs2008.vcproj  freeglut_vs2008.vcproj  release_steps
.github/: PULL_REQUEST_TEMPLATE.md  issue_template.md
.github/workflows/: build_freebsd_x11.yml  build_gnulinux_x11.yml  build_macos_cocoa.yml  build_macos_x11.yml  build_macosx_x11.yml  build_win_mingw.yml  build_win_msvc.yml  build_win_msvc6.yml
VisualStudio/2008/: freeglut.sln  freeglut.vcproj
VisualStudio/2010/: freeglut.vcxproj  freeglut.vcxproj.filters
VisualStudio2008Static/: freeglut.vcproj
altbuild/: Makefile  README.md  config.h.gnulinux  config.h.irix5  config.h.irix6  config.h.msvc6  config.h.sol26  config.h.unix  demo.dsp  freeglut.dsp  freeglut.dsw  freeglut_static.dsp
cmake/: FreeGLUTConfig.cmake.in  config.h.in  freeglut.pc.in  gen_date.cmake
doc/: api.md
freeglut/: CMakeLists.txt  README.blackberry  README.cmake  blackberry.toolchain.cmake  freeglut.mak  freeglut_static.dep  freeglut_static.mak  freeglut_vs2008.sln  freeglut_vs2008_static.sln
freeglut/VisualStudio2008/: freeglut.vcproj
freeglut/freeglut/: AUTHORS  CMakeLists.txt  LISEZMOI.cygwin_mingw  README  README.cmake  README.mingw_cross  blackberry.toolchain.cmake  freeglut.dep  freeglut_vs2008.vcproj
freeglut/src/: fg_internal.h  fg_window.c  freeglut_spaceball.c
freeglut/web-src/: basic_page.php  dinfo.php  freeglut-style.css  help.php  index.php  news.php  progress.php  template.php  uinfo.php  upload
include/GL/: freeglut_ext.h  freeglut_std.h  freeglut_ucall.h
man/: LICENSE  README  glut.man  glutAddMenuEntry.man  glutAddSubMenu.man  glutAppStatusFunc.man  glutAttachMenu.man  glutBitmapCharacter.man  glutBitmapHeight.man  glutBitmapLength.man  glutBitmapString.man  glutBitmapWidth.man  glutButtonBoxFunc.man  glutChangeToMenuEntry.man  glutChangeToSubMenu.man  glutCloseFunc.man  glutCopyColormap.man  glutCreateMenu.man  glutCreateMenuWindow.man  glutCreateSubWindow.man  glutCreateWindow.man  glutDestroyMenu.man  glutDestroyWindow.man  glutDeviceGet.man  glutDialsFunc.man  glutDisplayFunc.man  glutEnterGameMode.man  glutEntryFunc.man  glutEstablishOverlay.man  glutExtensionSupported.man  glutForceJoystickFunc.man  glutFullScreen.man  glutFullScreenToggle.man  glutGameModeGet.man  glutGameModeString.man  glutGestureFunc.man  glutGet.man  glutGetColor.man  glutGetModeValues.man  glutGetModifiers.man  (+82 more)
progs/demos/: demos.dsw
progs/docutil/: README.md  README_html2md.md  README_md2html.md  html2md.c  md2html.c
progs/test-shapes-gles1/: AndroidManifest.xml
src/: fg_callback_macros.h  fg_callbacks.c  fg_cursor.c  fg_display.c  fg_ext.c  fg_font.c  fg_font_data.c  fg_gamemode.c  fg_geometry.c  fg_gl2.c  fg_gl2.h  fg_init.c  fg_init.h  fg_input_devices.c  fg_internal.h  fg_joystick.c  fg_main.c  fg_menu.c  fg_misc.c  fg_overlay.c  fg_spaceball.c  fg_state.c  fg_stroke_mono_roman.c  fg_stroke_roman.c  fg_structure.c  fg_teapot.c  fg_teapot_data.h  fg_version.c.in  fg_version.h  fg_version.h.in  fg_videoresize.c  fg_window.c  freeglut_spaceball.c  freeglutdll.def.in  gles_stubs.c
src/Common/: freeglut_cursor.c  freeglut_display.c  freeglut_ext.c  freeglut_gamemode.c  freeglut_init.c  freeglut_input_devices.c  freeglut_internal.h  freeglut_joystick.c  freeglut_main.c  freeglut_menu.c  freeglut_spaceball.c  freeglut_state.c  freeglut_structure.c  freeglut_window.c
src/android/: fg_main_android.c
src/blackberry/: fg_internal_blackberry.h  fg_main_blackberry.c  fg_main_blackberry.h  fg_state_blackberry.c  fg_window_blackberry.c
src/cocoa/: .clang-format  fg_cmap_cocoa.m  fg_cursor_cocoa.m  fg_display_cocoa.m  fg_ext_cocoa.c  fg_ext_cocoa.m  fg_gamemode_cocoa.m  fg_glut_definitions_cocoa.c  fg_glut_definitions_cocoa.m  fg_init_cocoa.m  fg_input_devices_cocoa.m  fg_internal_cocoa.h  fg_internal_instrumentation_cocoa.h  fg_internal_instrumentation_cocoa.m  fg_main_cocoa.m  fg_spaceball_cocoa.m  fg_state_cocoa.m  fg_structure_cocoa.c  fg_structure_cocoa.m  fg_window_cocoa.m
src/egl/: fg_display_egl.c  fg_init_egl.h  fg_window_egl.c
src/mswin/: fg_cmap_mswin.c  fg_cursor_mswin.c  fg_display_mswin.c  fg_ext_mswin.c  fg_gamemode_mswin.c  fg_init_mswin.c  fg_input_devices_mswin.c  fg_internal_mswin.h  fg_joystick_mswin.c  fg_main_mswin.c  fg_menu_mswin.c  fg_spaceball_mswin.c  fg_state_mswin.c  fg_structure_mswin.c  fg_window_mswin.c  freeglut_gamemode_mswin.c  freeglut_init_mswin.c  freeglut_input_devices_mswin.c  freeglut_internal_mswin.h  freeglut_main_mswin.c  freeglut_menu_mswin.c  freeglut_state_mswin.c  freeglut_window_mswin.c
src/ogc/: fg_common_ogc.h  fg_cursor_ogc.c  fg_display_ogc.c  fg_ext_ogc.c  fg_gamemode_ogc.c  fg_init_ogc.c  fg_internal_ogc.h  fg_joystick_ogc.c  fg_main_ogc.c  fg_state_ogc.c  fg_window_ogc.c
src/util/: html2md.c  update_man_license.sh
src/wayland/: fg_init_wl.c
src/x11/: fg_cmap_x11.c  fg_cursor_x11.c  fg_display_x11_glx.c  fg_ext_x11.c  fg_gamemode_x11.c  fg_glutfont_definitions_x11.c  fg_init_x11.c  fg_input_devices_x11.c  fg_internal_x11.h  fg_internal_x11_glx.h  fg_joystick_x11.c  fg_main_x11.c  fg_menu_x11.c  fg_spaceball_x11.c  fg_state_x11.c  fg_state_x11_glx.c  fg_state_x11_glx.h  fg_structure_x11.c  fg_window_x11.c  fg_window_x11_glx.c  fg_window_x11_glx.h  fg_xinput_x11.c  freeglut_cursor_x11.c  freeglut_glutfont_definitions_x11.c  freeglut_init_x11.c  freeglut_internal_x11.h  freeglut_main_x11.c  freeglut_menu_x11.c  freeglut_spaceball_x11.c  freeglut_structure_x11.c  freeglut_window_x11.c
web-src/: basic_page.php  dinfo.php  freeglut-style.css  help.php  index.php  news.php  progress.php  template.php  uinfo.php
web-src/docs/: android.php  api.php  gles.php  install.php
web-src/images/: freeglut_logo.xcf  freeglut_text.xcf
(+246 files in other folders)
